[project]
name = "dagster_demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",
    "dbt-duckdb==1.9.*",
    "dbt-duckdb==1.9.*",
]

[project.optional-dependencies]
dev = ["dagster-webserver"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_demo.definitions"
code_location_name = "dagster_demo"
